--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('gestores.minha') }}">
+                        <a class="nav-link" href="{{ url_for('escolas.meus_gestores') }}">
                             <i class="bi bi-people"></i> Gestores
                         </a>
                     </li>
