--- a/templates/usuarios/visualizar.html
+++ b/templates/usuarios/visualizar.html
@@ -45,9 +45,14 @@
                 <a href="{{ url_for('usuarios.listar') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Voltar
                 </a>
-                <a href="{{ url_for('usuarios.logs', id=usuario.id) }}" class="btn btn-outline-secondary float-end">
-                    <i class="bi bi-clock-history"></i> Ver Logs
-                </a>
+                <div class="float-end">
+                    <a href="{{ url_for('usuarios.logs_acesso', id=usuario.id) }}" class="btn btn-outline-info">
+                        <i class="bi bi-door-open"></i> Logs de Acesso
+                    </a>
+                    <a href="{{ url_for('usuarios.logs', id=usuario.id) }}" class="btn btn-outline-secondary">
+                        <i class="bi bi-clock-history"></i> Logs de Alterações
+                    </a>
+                </div>
             </div>
         </div>
     </div>
